# zasso

./: .gitignore  CLAUDE.md  HOWTO_BUILD_DEV_ENV.md  Makefile  README.md  editions.json
.claude/: settings.json
.claude/agents/: code-reviewer.md  security-reviewer.md
.claude/commands/: formulate-tickets.md  jpush-branch.md  jpush.md  make-ticket.md  plan-ticket.md  pm2.md  review-ticket.md  start-ticket.md  test-ticket-scripts.md  update-docs.md
.claude/contexts/: dev.md  research.md  review.md
.claude/hooks/: hooks.json
.claude/rules/common/: coding-style.md  development-workflow.md  testing.md
.claude/rules/rust/: coding-style.md  patterns.md  security.md  testing.md
.claude/rules/web/: coding-style.md  hooks.md  patterns.md  testing.md
.claude/scripts/lib/: ticket-config.js  tickets.js
.claude/scripts/tickets/: README.md  backup-ticket.js  check-status.js  count-tickets.js  create-draft.js  create-ticket.js  delete-ticket.js  ensure-ticket-structure.js  find-by-slug.js  list-tickets.js  promote-draft.js  read-artifact.js  read-frontmatter.js  resolve-ticket.js  (+7 more)
.claude/team/: everything-claude-code-team-config.json
.claude/tickets/: queue.md
.zed/: settings.json
crates/procreg/: Cargo.toml  README.md  RFC-001-process-registry.md  Tickets.md  build.rs
crates/procreg/src/: child.rs  error.rs  graph.rs  lib.rs  panic.rs  platform.rs  port.rs  ready.rs  registry.rs  signal.rs  spawn.rs  startup_monitor.rs  state.rs  watch.rs  watchdog.rs
crates/procreg/tests/: integration.rs  test_server.sh
crates/procreg/watchdog/src/: main.rs
crates/siprs/: Cargo.toml  Tickets.md
crates/siprs/src/: config.rs  error.rs  event.rs  lib.rs  transport.rs
crates/siprs/src/audio/: bridge.rs  chunk.rs  format.rs  mixer.rs  mod.rs
crates/siprs/src/util/: bimap.rs  id.rs  mod.rs  pj_str.rs
crates/voiput/: .gitignore  Cargo.toml  Makefile  README.md  Tickets.md  build.rs
crates/voiput/libs/: .gitignore
crates/voiput/native/cs/: build.ps1
crates/voiput/native/cs/SpeechHelper/: Check.cs  SpeechHelper.cs  SpeechHelper.csproj
crates/voiput/native/swift/: SpeechHelper.swift  build.sh  speech_helper.h
crates/voiput/prebuilt/: .gitignore
crates/voiput/prebuilt/windows/: SpeechHelper.lib
crates/voiput/src/: audio.rs  config.rs  constants.rs  error.rs  lib.rs  lindera_util.rs  recognizer.rs  types.rs  voiput.rs
crates/voiput/src/backends/: mac.rs  mod.rs  openai.rs  win.rs
crates/voiput/src/binary/: test-run.rs
crates/voiput/src/hotkey/: mac.rs  mod.rs  win.rs  win_hook.rs
crates/voiput/src/input/: clipboard.rs  keyboard_mac.rs  keyboard_win.rs  mod.rs
crates/voiput/src/native/: mac_ffi.rs  mod.rs  win_ffi.rs
crates/voiput/src/pipeline/: denoiser.rs  mod.rs  post_correct.rs  punctuation.rs  resampler.rs  signal_filter.rs  streamer.rs  vad.rs
crates/voiput/tests/: integration_test.rs
docs/: guide-windows-stub-removal.md  rfc-stt-portable-crate.md  rust-sip-client-rfc.md
fe/: .gitignore  README.md  index.html  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  quasar.config.ts
fe/src/: App.vue
release-notes/: v0.24.243.md  v0.24.244.md  v0.24.245.md  v0.24.246.md  v0.24.248.md  v0.24.250.md  v0.24.251.md  v0.24.257.md  v0.24.259.md  v0.24.260.md  v0.24.261.md  v0.24.266.md  v0.24.268.md  v0.24.270.md  v0.24.271.md  v0.24.272.md  v0.24.273.md  v0.24.282.md  v0.24.283.md  v0.24.285.md  v0.24.286.md  v0.24.302.md
scripts/: deploy-installer.mjs  download_bifrost.sh  ensure-plugin-config.mjs  generate-favicons.mjs  sync-version.mjs  zed-deepseek-launch.sh
src/: index.html
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  sidecar.rs
tickets/: queue.md
tickets/specs/: 0001-os-rust-typescript.md  0002-runbuild.md  0003-make-build-dist.md  0004-untitled.md  0005-appvue.md  0006-indexpagevue.md  0007-dummyapppage.md  0008-m0-1-processdef-restartpolicy-readycondition-shutdowntimeoutconfig.md  0009-m0-2-registryerror-with-thiserror-anyhow.md  0010-m0-3-processstate-registryentry-registryinner-processregistry.md  0011-m1-1-restartpolicyon-crash-default-next-delay.md  0012-m2-1-resolve-start-order-dag.md  0013-m3-1-childguard-shutdown.md  0014-m4-1-is-process-alive.md  0015-m5-1-wait-ready-readycondition.md  0016-m6-1-processregistrynew-snapshot-subscribe-output-pipe-output-to.md  0017-m7-1-start-watch-task-watch-loop.md  0018-m8-1-spawn-onefake-start-all.md  0019-m9-1-shutdown-all-stop.md  0020-m10-1-unix-libc-sigterm.md  0021-m10-2-windows-win32.md  0022-m11-1-install-panic-hook.md  0023-m12-1-tauri-runeventexit.md  0024-m13-1.md  0025-edition-homebifrost.md  0026-process-registry-fate-sharing.md  0027-process-registry.md  0028-process-registry-2.md  0029-process-registry-watchdogos.md  0030-process-registry-3.md  0031-windows-sidecar-exe.md  0032-windows-procreg.md  0033-sidecar.md  0034-procreg-startupmonitor.md  0035-m0-1-crate-cargotoml-buildrs-librs-errorrs-constantsrs.md  0036-m0-2-typesrs-configrs.md  0037-m1-1-sincresampler-test-runrs-resampler.md  0038-m1-2-postcorrectionprocessor-test-runrs-post-correct.md  0039-m1-3-test-runrs-signal-filter.md  0040-m1-4-test-runrs-interceptor.md  (+53 more)
(+249 files in other folders)
