[package]
name = "process-registry"
version = "0.1.0"
edition = "2021"
description = "Cross-platform sidecar process manager — pure data types, lifecycle, and supervision"

[dependencies]
anyhow = "1.0.102"
petgraph = "0.8.3"
serde = { version = "1.0.228", features = ["derive"] }
thiserror = "2.0.18"
tokio = { version = "1.52.3", features = ["io-util", "macros", "net", "process", "rt", "rt-multi-thread", "signal", "sync", "time"] }
tokio-util = { version = "0.7.18", features = ["rt"] }

[dev-dependencies]
serde_json = "1.0.150"

[target."cfg(unix)".dependencies]
libc = "0.2.186"

[target."cfg(windows)".dependencies]
windows = { version = "0.62.2", features = ["Win32_System_Threading", "Win32_Foundation"] }
