[package]
name = "siprs"
version = "0.1.0"
edition = "2021"
description = "Async Rust SIP client crate powered by PJSUA 2.17"
license = "MIT OR Apache-2.0"

[dependencies]
secrecy = "0.10.3"
serde = { version = "1.0.228", features = ["derive"], optional = true }
thiserror = "2.0.18"
tracing = "0.1.44"

[dev-dependencies]
static_assertions = "1.1.0"

[features]
serde = ["dep:serde"]
tls = []
