[package]
name = "voiput"
version = "0.1.0"
edition = "2021"
description = "Portable, cross-platform speech-to-text crate with OS-native and OpenAI backends"
license = "MIT OR Apache-2.0"
include = [
    "src/**/*.rs",
    "prebuilt/**/*.a",
    "prebuilt/**/*.lib",
    "prebuilt/**/*.dll",
    "native/**/*.swift",
    "native/**/*.cs",
    "native/**/*.csproj",
    "native/**/*.sh",
    "native/**/*.ps1",
    "src/wav/*.wav",
    "README.md",
]

[lib]
name = "voiput"
crate-type = ["lib"]

[[bin]]
name = "test-run"
path = "src/binary/test-run.rs"

[dependencies]
anyhow = "1.0.102"
async-openai = { version = "0.41.0", features = ["audio", "chat-completion"] }
async-trait = "0.1.89"
hound = "3.5.1"
indexmap = { version = "2.14.0", features = ["serde"] }
lazy_static = "1.5.0"
lindera = { version = "3.0.7", features = ["embed-ipadic"] }
lindera-ipadic = "3.0.7"
log = "0.4.32"
parking_lot = "0.12.5"
rodio = "0.21"
rubato = "0.16"
serde = { version = "1.0.228", features = ["derive"] }
sherpa-onnx = { version = "1.13.2", default-features = false, features = ["shared"] }  # k2-fsa 公式。shared=動的リンク
thiserror = "2.0.18"
tokio = { version = "1.52.3", features = ["full"] }

# Phase 2 で有効化: cargo add lindera --features embed-ipadic
# lindera = { version = "latest", features = ["embed-ipadic"] }
# Phase 2 で有効化: cargo add lindera-ipadic
# lindera-ipadic = "latest"
# Phase 2 で有効化: cargo add rodio
# rodio = "latest"
# Phase 2 で有効化: cargo add lazy_static
# lazy_static = "latest"
# Phase 3 で有効化: cargo add hound
# hound = "latest"
# Phase 4 で有効化: cargo add async-openai --features audio
# async-openai = { version = "latest", features = ["audio"] }

[target.'cfg(target_os = "windows")'.dependencies]

[target."cfg(windows)".dependencies]
winapi = { version = "0.3.9", features = ["fileapi", "winbase"] }
# Phase 6 で有効化: cargo add winapi --features fileapi,winbase
# winapi = { version = "latest", features = ["fileapi", "winbase"] }

[dev-dependencies]
tempfile = "3.27.0"
